# yellow

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md
.github/: FUNDING.yml
benches/: cell_benchmarks.rs  delta_benchmarks.rs  hash_benchmarks.rs  io_benchmarks.rs  screen_benchmarks.rs
bindings/: README.md
bindings/zig/: build.zig  image_loader.c  image_loader.h  yellow.h  yellow.zig  zaz.h  zaz.zig
bindings/zig/examples/: basic.zig  colors-rgb.zig  mosaic.zig
examples/: advanced.rs  debug_sequences.rs  demo.rs  image.rs  kitty_keyboard.rs  mosaic.rs  simple.rs
examples/apps/colors-rgb/: Cargo.toml  README.md
examples/apps/colors-rgb-ncurses/: .gitignore  Makefile  README.md  colors-rgb.c
examples/apps/colors-rgb-ultraviolet/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
examples/apps/colors-rgb/src/: main.rs
src/: acs.rs  attr.rs  backend.rs  cell.rs  cell_old.rs  color.rs  delta.rs  error.rs  ffi.rs  image.rs  input.rs  kitty.rs  lib.rs  mosaic.rs  packed_color.rs  panel.rs  platform_io.rs  screen.rs  window.rs
