[package]
name = "zaz"
description = "cross-platform textual UI toolkit with bindings for Rust, C++, Zig and etc"
author = "Raphael Amorim <rapha850@gmail.com>"
license = "MIT"
version = "0.0.1"
edition = "2024"

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "2.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
image = "0.25"
